Fix padding on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,7 +27,8 @@ a {
   max-width: 1200px;
   margin-left: auto;
   margin-right: auto;
-  padding: 3rem;
+  padding: min(3rem, 10vw);
+  padding-top: 1rem;
 }
 
 .sponsorImg {
